# Pivot

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/root_agent/: agent.py  prompt.py
app/root_agent/sub_agents/admission_agent/: __init__.py  agent.py  prompt.py
app/root_agent/sub_agents/cv_reviewer_agent/: __init__.py  agent.py  prompt.py
app/root_agent/sub_agents/general_agent/: agent.py  prompt.py
app/root_agent/sub_agents/path_learning_agent/: __init__.py  agent.py  prompt.py
